# clawcode

./: .gitignore  install.sh  link-claw.sh  zhuze.md
rust/.claw/: config.json
rust/.claw/sessions/d00453036f17d1f4/: session-1778660406571-0.jsonl
rust/crates/api/: Cargo.toml
rust/crates/api/src/: client.rs  error.rs  lib.rs  types.rs
rust/crates/api/src/providers/: anthropic.rs  mod.rs  openai_compat.rs
rust/crates/claw-core/: Cargo.toml
rust/crates/claw-core/src/: lib.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: bash_validation.rs  config.rs  conversation.rs  file_ops.rs  git_context.rs  hooks.rs  lib.rs  mcp_stdio.rs  mcp_tool_bridge.rs  oauth.rs  permission_enforcer.rs  prompt.rs  session.rs  session_control.rs  usage.rs
rust/crates/rusty-claude-cli/: Cargo.toml  build.rs
rust/crates/rusty-claude-cli/src/: diff_report.rs  main.rs
rust/crates/tools/: Cargo.toml
rust/crates/tools/src/: lib.rs  tool_budget.rs  tool_specs.rs
